@startuml 床位管理-后端架构

skinparam classAttributeIconSize 0
skinparam backgroundColor #FEFEFE
skinparam defaultFontSize 10
skinparam dpi 96

skinparam class {
    BorderColor #1A5C8A
    BorderThickness 1.5
    BackgroundColor #EEF4FA
    FontSize 11
    HeaderBackgroundColor #1A5C8A
    HeaderFontColor #FFFFFF
}

skinparam abstractClass {
    BorderColor #3A7CB8
    BorderThickness 1.5
    BackgroundColor #F5F8FC
    FontSize 11
    HeaderBackgroundColor #3A7CB8
    HeaderFontColor #FFFFFF
    FontStyle italic
}

skinparam package {
    BorderThickness 1.5
    BackgroundColor #F8FAFD
    FontStyle bold
    FontSize 12
}

skinparam arrow {
    Color #3A7CB8
    Thickness 1.2
}

skinparam nodesep 20
skinparam ranksep 25

package "model" #E8F0FA {
    class Building {
        - buildingId : String
        - buildingName : String
        - floorCount : int
        - description : String
    }
    class Room {
        - roomId : String
        - roomNo : String
        - buildingId : String
        - floor : int
        - roomType : String
        - capacity : int
        - price : double
        - status : String
    }
    class Bed {
        - bedId : String
        - bedNo : String
        - roomId : String
        - status : String
    }
    class BedDetail {
        - detailId : String
        - bedId : String
        - customerId : String
        - assignDate : String
        - releaseDate : String
        - remark : String
    }
}

package "dao" #EAF0E8 {
    abstract class BaseJsonDao<T> {
        + findAll() : List\<T\>
        + findById(String) : T
        + insert(T) : boolean
        + update / delete / exists
        + load() / save()
    }
    class BuildingDao {
        {static} FILE = buildings.json
    }
    class RoomDao {
        {static} FILE = rooms.json
        + findByBuildingId(String) : List\<Room\>
        + findAvailable() : List\<Room\>
    }
    class BedDao {
        {static} FILE = beds.json
        + findByRoomId(String) : List\<Bed\>
        + findAvailable() : List\<Bed\>
    }
    class BedDetailDao {
        {static} FILE = bed_details.json
        + findByBedId(String) : List\<BedDetail\>
        + findByCustomerId(String) : List\<BedDetail\>
    }
}

package "service" #FAF5E8 {
    class BuildingService {
        - dao : BuildingDao
        + findAll() / findById()
        + add / update / delete / exists
    }
    class BedService {
        - dao : BedDao
        + findAll() / findById()
        + findByRoomId(String)
        + findAvailable()
        + add / update / delete / exists
    }
    class BedDetailService {
        - dao : BedDetailDao
        + findAll() / findById()
        + findByBedId(String)
        + findByCustomerId(String)
        + add / update / delete
    }
}

' === 继承 ===
BaseJsonDao <|-- BuildingDao
BaseJsonDao <|-- RoomDao
BaseJsonDao <|-- BedDao
BaseJsonDao <|-- BedDetailDao

' === 泛型绑定 ===
BuildingDao ....> Building
RoomDao ........> Room
BedDao .........> Bed
BedDetailDao ...> BedDetail

' === Service → DAO ===
BuildingService --> BuildingDao
BedService --> BedDao
BedDetailService --> BedDetailDao

' === 模型关联 ===
Room ....> Building : buildingId
Bed .....> Room : roomId
BedDetail ..> Bed : bedId

note top of Bed : status: "空闲" / "已占用"
note top of BedDetail : 床位分配记录\nassignDate / releaseDate

@enduml
